--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,37 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="referrer" content="no-referrer" />
+
+		<!-- PWA Meta Tags -->
+		<meta name="theme-color" content="#3b82f6" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-title" content="Trichter" />
+		<meta name="description" content="Real-time leaderboard for sales performance tracking" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="msapplication-config" content="/icons/browserconfig.xml" />
+		<meta name="msapplication-TileColor" content="#3b82f6" />
+		<meta name="msapplication-tap-highlight" content="no" />
+
+		<!-- Apple Touch Icons -->
+		<link rel="apple-touch-icon" href="/icon-192x192.svg" />
+		<link rel="apple-touch-icon" sizes="152x152" href="/icon-192x192.svg" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/icon-192x192.svg" />
+		<link rel="apple-touch-icon" sizes="167x167" href="/icon-192x192.svg" />
+
+		<!-- Apple Splash Screens -->
+		<link rel="apple-touch-startup-image" href="/icon-512x512.svg" />
+		<meta name="apple-mobile-web-app-title" content="Trichter" />
+
+		<!-- Additional PWA Meta Tags -->
+		<meta name="application-name" content="Trichter" />
+		<meta name="msapplication-tooltip" content="Trichter - Lead Leaderboard" />
+		<meta name="msapplication-starturl" content="/" />
+
+		<!-- PWA Manifest -->
+		<link rel="manifest" href="/manifest.json" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
